tests/chapter_16/invalid_parse/invalid_type_specifier_2.c
int main(void) {
    // cannot combine char with any other type specifier
    // except signed and unsigned
    char static LONG64 x = 0;
    return 0;
}